--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -26,6 +26,7 @@
   width: auto;
   padding-top: 0;
   object-fit: contain;
+  display: block;
 }
 
 .logo-container {
